--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         )
       }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
+    <script>
+      const url = `https://maps.googleapis.com/maps/api/js?key=&v=3&callback=initMap`
+    </script>
 
-  </body>
+    <script async defer src=url></script>
+  <script type="text/javascript" src="bundle.js"></script></body>
 </html>
