increase jquery version

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
       }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuLrjInAtrOY-WxL0dVHE9ebV9vsQbaeA&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
 
   </body>
 </html>
